--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,10 @@
 @import url("components/banner.css");
 @import url("components/card.css");
 @import url("components/navbar.css");
+* {
+    margin: 0px;
+    padding: 0px;
+    background-color: #E5E5E5;
+    font-family: "Inter" sans-serif;
+    font-weight: 400px;
+}
