Add card and button

--- a/css/components/container.css
+++ b/css/components/container.css
@@ -3,6 +3,12 @@
     margin: 0 auto;
 }
 
+.container-text {
+    background-color: #E5E5E5;
+    height: 550px;
+    padding: 40px;
+}
+
 @media (max-width: 960px) {
     /* Para una pantalla < 960px, se leerá este CSS */
     .container {
