--- a/css/components/card.css
+++ b/css/components/card.css
@@ -5,5 +5,14 @@
     background: #FFFFFF;
     /* shadow */
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
-    border-radius: 32px;
+    border-radius: 50px;
+}
+
+.input-text {
+    margin-top: 90px;
+}
+
+.input-text-area {
+    margin-top: 10px;
+    margin-left: 90px;
 }
